--- a/tests/castling/castling_after_move.in
+++ b/tests/castling/castling_after_move.in
@@ -6,10 +6,11 @@ move f8 b4
 move e2 e1
 move g8 f6
 move f1 b5
+move h7 h6
 move g1 f3
 move h8 h7
 move e1 g1
 move d1 e2
 move h7 h8
-move b1 x3
+move b1 c3
 move e8 g8
